[project]
name = "tradingbridge"
version = "0.1.0"
description = "WebHook Alerts from TradingView trigger a custom trading strategy pipeline."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.12.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
